# landscript

./: .gitignore  LICENSE  README.md  check_glyphs.py  diagnose.py  diagnose_clip.py  diagnose_iou.py  gallery.py  pyproject.toml  regen_pngs.py  run.sh  run_pipeline.py
data/metadata/: in-kutch-rann.json
landscript/: __init__.py  clip_matcher.py  clip_rerank.py  config.py  cv_pipeline.py  extractors.py  features.py  gee.py  metadata.py  regions.py  shape_filters.py  stac.py  tile_matcher.py  tiles.py
notebooks/: extract_glyphs.ipynb
