[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "landscript"
version = "0.1.0"
description = "Discover typography hidden in satellite imagery"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Prasanta Kumar Dutta" },
]
requires-python = ">=3.10"
packages = [{ include = "landscript" }]
dependencies = [
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "scikit-image>=0.21",
    "shapely>=2.0",
    "rasterio>=1.3",
    "Pillow>=10.0",
    "tqdm>=4.65",
    "pystac-client>=0.8",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "jupyter>=1.0",
]
print = [
    "cairosvg>=2.7",
    "reportlab>=4.0",
    "weasyprint>=60",
]
